# kraken

./: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
config/: momentum_weights.yaml  options.yaml  pairs.yaml  risk.yaml  scoring_weights.yaml  tickers.yaml
docs/: architecture.md  falsification_plan.md  research_elliott_wave.md  roadmap.md
scripts/: score_from_bars.py
src/kraken_ew/: __init__.py  cli.py  config.py
src/kraken_ew/backtest/: baselines.py  momentum_strategy_signals.py  run_backtest.py  strategy_signals.py  walk_forward.py
src/kraken_ew/dashboard/: scan.py
src/kraken_ew/data/: equity_source.py  fetch_history.py  kraken_rest.py  massive_rest.py  ohlcv_store.py  trades_store.py  yfinance_client.py
src/kraken_ew/decisionlog/: logger.py
src/kraken_ew/indicators/: momentum.py  structure.py  trend.py  volatility.py  volume.py
src/kraken_ew/live/: kraken_paper_cli.py  paper_runner.py  stock_paper.py  stock_runner.py
src/kraken_ew/options/: chain.py  greeks.py  sizing.py
src/kraken_ew/scoring/: composite.py  momentum_strategy.py
src/kraken_ew/waves/: fibonacci.py  patterns.py  pivots.py  wave_validity.py
tests/: conftest.py  test_composite_scoring.py  test_fibonacci.py  test_indicators.py  test_momentum_engine.py  test_patterns.py  test_pivots.py  test_scan.py  test_structure.py
