[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-ew"
version = "0.1.0"
description = "Elliott Wave + quantitative confirmation trading system (Phase 1 MVP, Kraken-only)"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.10",
    "pyyaml>=6.0",
    "vectorbt>=0.26",
    "typer>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
kraken-ew = "kraken_ew.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
